# curation-enricher-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  claude.md  docker-compose.yml  pyproject.toml
examples/: example_usage.py  sample_config.yml
scripts/: setup.sh
src/enricher/: __init__.py  cli.py  config.py  datahub_client.py  enrichment_engine.py  llm_base.py  llm_claude_code.py  llm_service.py
src/enricher/prompts/: __init__.py  column_description.py  pii_detection.py  tag_suggestion.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_datahub_integration.py
tests/unit/: __init__.py  test_config.py
